# kmeans-palette-generator

./: .dockerignore  Dockerfile  app.py  pyproject.toml  requirements.txt
notebooks/: 01 - Exploratory.ipynb
src/: palette.py
