[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Madson Dias <madsonddias@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"
streamlit = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyterlab = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
